# CortonaV1

./: .gitignore  CHANGELOG.md  READEME.md  README.md  calendar.json  main.py  notes.json  pyproject.toml  reminders.json
.github/workflows/: ci.yml
agents/: __init__.py  builtin_agents.py  contracts.py  mesh.py  providers.py
api/: __init__.py  agent_mesh_runner.py  cycle_runner.py  embeddings_runner.py  pipeline_runner.py  state_runner.py
core/: __init__.py  canonical_schema.py  deterministic_id.py  telemetry.py
data/: memory.meta.json
docs/: API_CONTRACTS.md  ARCHITECTURE.md
embeddings/: __init__.py  faiss_store.py  indexer.py  models.py  structured_text.py  vector_store.py
examples/: google_calendar.json
graph/: __init__.py  relation_builder.py
ingest/: google_calendar.py  google_drive.py
ingestion/: __init__.py  calendar_mapper.py  common.py  export_loader.py  notes_mapper.py  reminders_mapper.py
local-ingest/: README.md
local-ingest/examples/: apple_notes.json  apple_reminders.json
local-ingest/ingest/: apple_notes.py  apple_reminders.py  base.py
normalize/: canonical_event.py
scripts/: run_cognitive_cycle.py
state/: __init__.py  engine.py  models.py
storage/: sqlite_store.py
storage/normalized/: google_calendar_canonical.json
storage/raw/: apple_notes_20260225T163508Z.json  apple_notes_20260225T175318Z.json  apple_notes_20260226T020024Z.json  apple_reminders_20260225T175318Z.json  apple_reminders_20260226T020024Z.json  google_calendar_20260225T175318Z.json  google_calendar_20260226T020024Z.json
tests/agents/: test_agent_mesh.py
tests/api/: test_cycle_runner.py  test_pipeline_runner.py
tests/embeddings/: test_faiss_store.py  test_indexer.py  test_structured_text.py
tests/graph/: test_relation_builder.py
tests/ingestion/: test_mappers.py
tools/: __init__.py  builtin_tools.py  registry.py
(+9 files in other folders)
