[project]
name = "cortona"
version = "0.1.0"
description = "Local-first cognitive orchestration backend"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
]
embeddings = [
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "api*",
    "core*",
    "graph*",
    "state*",
    "agents*",
    "storage*",
    "ingestion*",
    "embeddings*",
    "tools*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B905"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
ignore_missing_imports = true
exclude = "(^tests/)|(^scripts/)"
